finalização do crawler linio