@@ -7,6 +7,7 @@ import br.com.lett.crawlernode.core.fetcher.methods.JsoupDataFetcher;
 import br.com.lett.crawlernode.core.fetcher.models.Request;
 import br.com.lett.crawlernode.core.fetcher.models.Response;
 import br.com.lett.crawlernode.core.models.Card;
+import br.com.lett.crawlernode.core.models.Parser;
 import br.com.lett.crawlernode.core.models.Product;
 import br.com.lett.crawlernode.core.models.ProductBuilder;
 import br.com.lett.crawlernode.core.session.Session;
@@ -16,13 +17,14 @@ import br.com.lett.crawlernode.util.Logging;
 import com.google.common.collect.Sets;
 import exceptions.MalformedPricingException;
 import exceptions.OfferException;
+import models.AdvancedRatingReview;
 import models.Offer;
 import models.Offers;
+import models.RatingsReviews;
 import models.pricing.*;
-import org.json.JSONObject;
-import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
+import org.jsoup.select.Elements;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -32,59 +34,152 @@ import java.util.Set;
 public class PeruLinioCrawler extends Crawler {
    public PeruLinioCrawler(Session session) {
       super(session);
+      super.config.setParser(Parser.HTML);
    }
+
    private static final String SELLER_NAME = "Linio";
-   protected Document fetchDocument(String url) {
+
+   @Override
+   protected Response fetchResponse() {
       Request request = Request.RequestBuilder.create()
-         .setUrl(url)
+         .setUrl(this.session.getOriginalURL())
          .setProxyservice(Arrays.asList(
-            ProxyCollection.BUY_HAPROXY,
-            ProxyCollection.LUMINATI_SERVER_BR_HAPROXY,
-            ProxyCollection.NETNUT_RESIDENTIAL_ES,
-            ProxyCollection.SMART_PROXY_PE
+            ProxyCollection.NETNUT_RESIDENTIAL_ES_HAPROXY,
+            ProxyCollection.SMART_PROXY_PE_HAPROXY
          ))
          .build();
-
-      Response response = CrawlerUtils.retryRequestWithListDataFetcher(request, List.of(new ApacheDataFetcher(), new JsoupDataFetcher(), new FetcherDataFetcher()), session);
-
-      return Jsoup.parse(response.getBody());
+      return CrawlerUtils.retryRequestWithListDataFetcher(request, List.of(new FetcherDataFetcher(), new ApacheDataFetcher(), new JsoupDataFetcher()), session);
    }
+
    @Override
    public List<Product> extractInformation(Document doc) throws Exception {
-      doc = fetchDocument(session.getOriginalURL());
       List<Product> products = new ArrayList<>();
       Element product = doc.selectFirst(".wrapper.container-fluid");
       if (product != null) {
-         String internalId = CrawlerUtils.scrapStringSimpleInfoByAttribute(product, ".js-product-form input", "value");
+         String internalPid = CrawlerUtils.scrapStringSimpleInfo(product, ".feature [itemprop=\"sku\"]", true);
          String name = CrawlerUtils.scrapStringSimpleInfo(product, ".product-name", true);
-         String primaryImage = CrawlerUtils.scrapSimplePrimaryImage(product,".image-modal",List.of("data-lazy"),"https","");
+         String primaryImage = CrawlerUtils.scrapSimplePrimaryImage(product, ".image-modal", List.of("data-lazy"), "https", "");
          List<String> categories = CrawlerUtils.crawlCategories(doc, ".breadcrumb li", true);
-         String description = CrawlerUtils.scrapStringSimpleInfo(product, ".product-description.user-content", false);
-         Offers offers = scrapOffers(doc);
-         List<String> secondaryImages = CrawlerUtils.scrapSecondaryImages(doc, ".product-image.thumb-image .image-wrapper .image", Arrays.asList("data-lazy"), "https", "",primaryImage);;
+         String description = CrawlerUtils.scrapSimpleDescription(doc, List.of(".panel-body"));
+         List<String> secondaryImages = CrawlerUtils.scrapSecondaryImages(doc, ".product-image.thumb-image .image-wrapper .image", Arrays.asList("data-lazy"), "https", "", primaryImage);
+         RatingsReviews ratingsReviews = scrapRatingReviews(product);
+         Elements elementsVariations = doc.select(".select-dropdown__list-item");
+         Offers offers = new Offers();
+         Integer index = 1;
+         if (elementsVariations.size() > 0) {
+            for (Element elementVariation : elementsVariations) {
 
-         Product newProduct = ProductBuilder.create()
-            .setInternalId(internalId)
-            .setInternalPid(internalId)
-            .setUrl(session.getOriginalURL())
-            .setCategories(categories)
-            .setName(name)
-            .setOffers(offers)
-            .setPrimaryImage(primaryImage)
-            .setSecondaryImages(secondaryImages)
-            .setDescription(description)
-            .build();
-         products.add(newProduct);
+               Integer stock = CrawlerUtils.scrapIntegerFromHtmlAttr(elementVariation, "option", "data-option-stock", 0);
+               String internalId = CrawlerUtils.scrapStringSimpleInfoByAttribute(elementVariation, "option", "value");
+               if (internalId == null || internalId.isEmpty()) {
+                  internalId = internalPid;
+               }
+               String nameVariation = CrawlerUtils.scrapStringSimpleInfo(elementVariation, "option", true);
+               if (nameVariation != null && !nameVariation.isEmpty()) {
+                  if (stock > 0) {
+                     offers = scrapOffers(product, index);
+                  }
+                  nameVariation = name + " - " + nameVariation;
+               } else {
+                  nameVariation = name;
+               }
+               Product newProduct = ProductBuilder.create()
+                  .setInternalId(internalId)
+                  .setInternalPid(internalPid)
+                  .setUrl(session.getOriginalURL())
+                  .setCategories(categories)
+                  .setName(nameVariation)
+                  .setOffers(offers)
+                  .setPrimaryImage(primaryImage)
+                  .setSecondaryImages(secondaryImages)
+                  .setDescription(description)
+                  .setRatingReviews(ratingsReviews)
+                  .build();
+               products.add(newProduct);
+               index++;
+            }
+         } else {
+            String asgotado = CrawlerUtils.scrapStringSimpleInfo(product, "#buy-now", true);
+            if (asgotado != null && !asgotado.isEmpty() && !asgotado.contains("Agotado")) {
+               offers = scrapOffers(product, index);
+            }
+            Product newProduct = ProductBuilder.create()
+               .setInternalId(internalPid)
+               .setInternalPid(internalPid)
+               .setUrl(session.getOriginalURL())
+               .setCategories(categories)
+               .setName(name)
+               .setOffers(offers)
+               .setPrimaryImage(primaryImage)
+               .setSecondaryImages(secondaryImages)
+               .setDescription(description)
+               .setRatingReviews(ratingsReviews)
+               .build();
+            products.add(newProduct);
+         }
+
       } else {
          Logging.printLogDebug(logger, session, "Not a product page " + this.session.getOriginalURL());
       }
       return products;
    }
-   private Offers scrapOffers(Element data) throws OfferException, MalformedPricingException {
+
+   private RatingsReviews scrapRatingReviews(Element product) {
+      RatingsReviews ratingsReviews = new RatingsReviews();
+      Integer totalWrittenReviews = getTotalWrittenReviews(CrawlerUtils.scrapStringSimpleInfo(product, ".chart-count", true));
+      AdvancedRatingReview advancedRatingReview = scrapAdvancedRatingReview(product.select(".chart-progress.col-12"));
+      Double average = CrawlerUtils.scrapDoublePriceFromHtml(product, ".review-subtitle-label.body-accent-lg.col-2", null, true, '.', session);
+
+      ratingsReviews.setDate(session.getDate());
+      ratingsReviews.setTotalRating(totalWrittenReviews);
+      ratingsReviews.setAdvancedRatingReview(advancedRatingReview);
+      ratingsReviews.setTotalWrittenReviews(totalWrittenReviews);
+      ratingsReviews.setAverageOverallRating(average);
+
+
+      return ratingsReviews;
+   }
+
+   private AdvancedRatingReview scrapAdvancedRatingReview(Elements reviews) {
+      if (reviews != null) {
+         List<Integer> stars = new ArrayList<>(List.of(0, 0, 0, 0, 0));
+         for (Element review : reviews) {
+            String numberAvaliationString = CrawlerUtils.scrapStringSimpleInfo(review, ".number-of-reviews", true);
+            String startString = CrawlerUtils.scrapStringSimpleInfo(review, "span", true);
+            if (numberAvaliationString != null && !numberAvaliationString.isEmpty() && startString != null && !startString.isEmpty()) {
+               Integer numberAvaliationInteger = Integer.parseInt(numberAvaliationString);
+               Integer starInteger = Integer.parseInt(startString);
+               stars.set(starInteger - 1, numberAvaliationInteger);
+            }
+         }
+
+         return new AdvancedRatingReview.Builder()
+            .totalStar1(stars.get(0))
+            .totalStar2(stars.get(1))
+            .totalStar3(stars.get(2))
+            .totalStar4(stars.get(3))
+            .totalStar5(stars.get(4))
+            .build();
+      }
+      return null;
+   }
+
+   private Integer getTotalWrittenReviews(String avaliation) {
+      Integer totalAvaliations = 0;
+      if (avaliation != null && !avaliation.isEmpty()) {
+         List<String> numberAvaliation = List.of(avaliation.split(" "));
+         if (numberAvaliation.size() > 0) {
+            totalAvaliations = Integer.parseInt(numberAvaliation.get(0));
+         }
+      }
+      return totalAvaliations;
+   }
+
+   private Offers scrapOffers(Element data, Integer optionIndex) throws OfferException, MalformedPricingException {
       Offers offers = new Offers();
       List<String> sales = new ArrayList<>();
 
-      Pricing pricing = scrapPricing(data);
+      Pricing pricing = scrapPricing(data, optionIndex);
       sales.add(CrawlerUtils.calculateSales(pricing));
 
       offers.add(Offer.OfferBuilder.create()
@@ -100,9 +195,10 @@ public class PeruLinioCrawler extends Crawler {
       return offers;
    }
 
-   private Pricing scrapPricing(Element doc) throws MalformedPricingException {
-      Double spotlightPrice = CrawlerUtils.scrapDoublePriceFromHtml(doc, ".price-main-md", null, true, '.', session);
-      Double price = CrawlerUtils.scrapDoublePriceFromHtml(doc, ".original-price", null, true, '.', session);
+   private Pricing scrapPricing(Element doc, Integer optionIndex) throws MalformedPricingException {
+      Element divVariation = doc.selectFirst(".product-price-container.option-container.option-" + optionIndex);
+      Double spotlightPrice = CrawlerUtils.scrapDoublePriceFromHtml(divVariation, ".price-main-md", null, true, '.', session);
+      Double price = CrawlerUtils.scrapDoublePriceFromHtml(divVariation, ".original-price", null, true, '.', session);
       CreditCards creditCards = scrapCreditCards(spotlightPrice);
       BankSlip bankSlip = BankSlip.BankSlipBuilder.create()
          .setFinalPrice(spotlightPrice)
@@ -125,8 +221,7 @@ public class PeruLinioCrawler extends Crawler {
          .build());
 
       Set<String> cards = Sets.newHashSet(Card.VISA.toString(), Card.MASTERCARD.toString(),
-         Card.AMEX.toString(), Card.DINERS.toString(), Card.AURA.toString(),
-         Card.ELO.toString(), Card.HIPER.toString(), Card.HIPERCARD.toString(), Card.DISCOVER.toString());
+         Card.AMEX.toString(), Card.DINERS.toString());
 
       for (String card : cards) {
          creditCards.add(CreditCard.CreditCardBuilder.create()
@@ -137,25 +232,5 @@ public class PeruLinioCrawler extends Crawler {
       }
 
       return creditCards;
-   }
-   private List<String> getSecondaryImages(Document doc, String imgUrl) {
-      List<String> imgs = CrawlerUtils.scrapSecondaryImages(doc, ".col-2.d-none.d-md-block a img", Arrays.asList("data-srcset"), "https", "", imgUrl);
-      List<String> returnImgs = new ArrayList<String>();
-      if (imgs != null && !imgs.isEmpty()) {
-         for (Integer i = 1; i < imgs.size(); i++) {
-            returnImgs.add(getImage(imgs.get(i)));
-         }
-      }
-      return returnImgs;
-   }
-
-   private String getImage(String values) {
-      String imgs[] = values.split(",");
-      Integer ult = imgs.length - 1;
-      String pathImg[] = imgs[ult].split(" ");
-      if (pathImg[1].contains("https://")) {
-         return pathImg[1];
-      }
-      return "https:" + pathImg[1];
    }
 }
